--- a/index.html
+++ b/index.html
@@ -172,6 +172,7 @@
 	   	   </div>
 		   
 		   <!-- Import JS files -->
+		   <script src="src/Config.js"></script>
 		   <script src="src/HUD.js"></script>
 		   <script src="src/Menu.js"></script>
 		   <script src="src/Background.js"></script>
