Click to unpause screen

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 		   	   			<div class="center0">
 		   	   				<div class="center1">
 				   	   			<div class="center2">
-									<div id='pause' class="screenMenu">
+									<div id='pause' class="screenMenu" onclick='menu.togglePause();'>
 										<div class='title' style="background-position:0 -100px;"></div>
 										<div class='stats' id='main' style='font-size:16px'>
 											Press the Play button<br>to resume flight
