Click to unpause screen 2

--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
 												</div>
 											</div>
 										</div>
+										<div style="width: 480px; height: 320px; position: absolute; top: 0; left: 0;"></div>
 									</div>
 									<div id='gameover' class="screenMenu" style="top:40px;" >
 										<div class="center2" style="width:400px;">
